--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 	  <h2 style="color:#8FAD00;">B</h2>  <!-- Changed from X to B -->
 	</div>
 	<div class="balloons text-center" id="b5">
-	  <h2 style="color:#8377E4;">U</h2>  <!-- Changed from O to U -->
+	  <h2 style="color:#8377E4;">I</h2>  <!-- Changed from O to U -->
 	</div>
 	<div class="balloons text-center" id="b6">
-	  <h2 style="color:#99C96A;">B</h2>  <!-- Changed from L to B -->
+	  <h2 style="color:#99C96A;">S</h2>  <!-- Changed from L to B -->
 	</div>
 	<div class="balloons text-center" id="b7">
-	  <h2 style="color:#20CFB4;">L</h2>  <!-- Changed from A to L -->
+	  <h2 style="color:#20CFB4;">W</h2>  <!-- Changed from A to L -->
 	</div>
 	<!-- Add new balloon for 'A' -->
 	<div class="balloons text-center" id="b8">
@@ -160,12 +160,12 @@
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
-					<button class="btn btn-primary" id="play">Gaana Bajao</button>
-					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
+					<button class="btn btn-primary" id="turn_on">Lights jala BC</button>
+					<button class="btn btn-primary" id="play">Gaan Bajao</button>
+					<button class="btn btn-primary" id="bannar_coming">Sajano Jak?</button>
 					<button class="btn btn-primary" id="balloons_flying">Balloons udana hai?</button>
 					<button class="btn btn-primary" id="cake_fadein">Cake Khabe?</button>
-					<button class="btn btn-primary" id="light_candle"> Light & Candles?</button>
+					<button class="btn btn-primary" id="light_candle"> Mombati jalabe?</button>
 					<button class="btn btn-primary" id="wish_message">Ready!!!!!</button>
 					<button class="btn btn-primary" id="story">A mesage for you</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
