--- a/index.html
+++ b/index.html
@@ -109,52 +109,52 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-			    <p>Today is...</p>
-			    <p>as beautiful as any other day.</p>
-			    <p>But do you realize...</p>
-			    <p>another year has passed</p>
-			    <p>in the blink of an eye?</p>
-			    <p><strong>However...</strong></p>
-			    <p>Do you know?</p>
-			    <p>Today is something special,</p>
-			    <p>so special for you.</p>
-			    <p>That’s why..let's make it</p>
-			    <p>the best celebration ever!!!!!!</p>
-			    <p>And let me share...</p>
-			    <p>a piece of happiness with you.</p>
-			    <p>I made all this...T_T</p>
-			    <p>as a birthday present for you.</p>
-			    <p>Thanks for the friendship we’ve shared,</p>
-			    <p>thanks for everything.</p>
-			    <p>I wish you all the best.</p>
-			    <p>May your life be filled with ease.</p>
-			    <p>May all your wishes come true.</p>
-			    <p>Remember...</p>
-			    <p>who you are!</p>
-			    <p>The real story of your life</p>
-			    <p>is just about to begin.</p>
-			    <p>but...</p>
-			    <p>don’t worry,</p>
-			    <p>because...</p>
-			    <p>Ur loved ones has your back.</p>
-			    <p>And...</p>
-			    <p>this year things will go better.</p>
-			    <p>And I hope...</p>
-			    <p>you’ll find</p>
-			    <p>happiness along the way.</p>
-			    <p>Keep your spirit up.</p>
-			    <p>Enjoy every single moment you experience today!</p>
-			    <p>Fill it with your most beautiful smile,</p>
-			    <p>and make it the best memory.</p>
-			    <p>Lastly...</p>
-			    <p>I’d like to wish you once again,</p>
-			    <p>a very happy birthday, my Bubla!</p>
-			    <p>Kom jogra kor ektu amr sthA T_T</p>
-			    <p>I know I'm not your dream picture-perfect boy,</p>
-			    <p>but I always try my best.</p>
-			    <p>I know it's not always satisfying,</p>
-			    <p>Magar ab jo ha so haa m like this only</p>
-			    <p>NOTE - PEY JABI CHAKRI DONT WORRY!</p>	
+			    <p>Do you know?</p> 
+				<p>Today is a very special day,</p> 
+				<p>because it's our pagla premik's bday!</p> 
+				<p>That’s why..let's make it</p> 
+				<p>the best celebration ever!!!!!!</p> 
+				<p>And let us share...</p> 
+				<p>a piece of happiness with you.</p> 
+				<p>We made all this...T_T</p> 
+				<p>Sudhu matro tor jonno khanki</p> 
+				<p>toke ekta jinish bolchi shon </p> 
+				<p>Paglamo kor jibone kintu ektu kom...</p> 
+				<p>It's been 3 years we know u...</p> 
+				<p>Like seriously...Bhaba jai!??😱</p> 
+				<p>Eitoh sedin amra section F e dhuklam</p> 
+				<p>Ar kengla ekta bisu k dekhlm😂🤣</p> 
+				<p>sala kobe hutt kore ese amader jibone topke geli janina...</p> 
+				<p>sedin theke ekhono jaliye jacchisss...</p> 
+				<p>irritate kora ar gadhamo korata bondho kor ebar plzzz 🙏🏻..</p> 
+				<p>Ei 3 yrs er moddhei prochur bar jhamelahoeche </p> 
+				<p> jhogra hoeche</p> 
+				<p>abar onek fajlamo merechi...</p> 
+				<p>cheers to the good times</p> 
+				<p>when we 3 shared the same bench😭😂 ...</p> 
+				<p>hopefully abar sei time ekdin fire pabo🥺🤌🏻</p> 
+				<p>Remember aloo potol sob somoi eksathe chilo </p>
+				<p>eksath thakbe 🫂</p> 
+				<p>jotoi ja boli mone rakhis sob tr bhalor jonnoi bola hoi</p> 
+				<p>and tui seta bujhiso, but kokhono kokhono badramo korishh 🐒...</p> 
+				<p>asa kori tor sob sopno puron hok ....</p> 
+				<p>tui tor sopner rajkonya k khuje peye ja joldi,</p>
+				<p>tle amra sobai gari kore jabo DGP🤣🥳...band party niyee 🥁 💃🏻</p>
+				<p>tui ki bhebechili ? Banchodddddddd</p> 
+				<p>amra bhule gechi ajker special din ta?</p> 
+				<p>Ajke tr moto ekta (@#*$)sundor bhodro suor jonmo niyechiloo...</p> 
+				<p>j no one can forget ever🤣🤌🏻</p>
+				<p>basss bohut likh diya abhi</p> 
+				<p> payment bhej dena itna sb accha likhne ka..</p> 
+				<p>Joy aloo potoler joy✊🏻</p>
+				<p>ajker din ta khub moja korr...</p>
+				<p>God bless u our chota cum boro dada😝😝...</p> 
+				<p>chakrir chinta chere de...babar ta peye jabi🌚</p> 
+				<p>r tarpor amader referral diye dishh...</p> 
+				<p>mojak aparttt peye jabi fs ....</p> 
+				<p>Subho jonom dibos😼🤝🍰</p>
+				<p>Treat ta kobe asbe??</p> 
+				<p>BokaChelaaaaa</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
