--- a/index.html
+++ b/index.html
@@ -109,52 +109,52 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-			    <p>Hiiii!! Tui ki Janishhhh?</p> 
-				<p>Today is a very special day,</p> 
-				<p>because it's our pagla premik's bday!</p> 
-				<p>That’s why..let's make it</p> 
-				<p>the best celebration ever!!!!!!</p> 
-				<p>And let us share...</p> 
-				<p>a piece of happiness with you.</p> 
-				<p>We made all this...T_T</p> 
-				<p>Sudhu matro tor jonno khanki</p> 
-				<p>toke ekta jinish bolchi shon </p> 
-				<p>Paglamo kor jibone kintu ektu kom...</p> 
-				<p>It's been 3 years we know u...</p> 
-				<p>Like seriously...Bhaba jai!??😱</p> 
-				<p>Eitoh sedin amra section F e dhuklam</p> 
-				<p>Ar kengla ekta bisu k dekhlm😂🤣</p> 
-				<p>sala kobe hutt kore ese amader jibone topke geli janina...</p> 
-				<p>sedin theke ekhono jaliye jacchisss...</p> 
-				<p>irritate kora ar gadhamo korata bondho kor ebar plzzz 🙏🏻..</p> 
-				<p>Ei 3 yrs er moddhei prochur bar jhamelahoeche </p> 
-				<p> jhogra hoeche</p> 
-				<p>abar onek fajlamo merechi...</p> 
-				<p>cheers to the good times</p> 
-				<p>when we 3 shared the same bench😭😂 ...</p> 
-				<p>hopefully abar sei time ekdin fire pabo🥺🤌🏻</p> 
-				<p>Remember aloo potol sob somoi eksathe chilo </p>
-				<p>eksath thakbe 🫂</p> 
-				<p>jotoi ja boli mone rakhis sob tr bhalor jonnoi bola hoi</p> 
-				<p>and tui seta bujhiso, but kokhono kokhono badramo korishh 🐒...</p> 
-				<p>asa kori tor sob sopno puron hok ....</p> 
-				<p>tui tor sopner rajkonya k khuje peye ja joldi,</p>
-				<p>tle amra sobai gari kore jabo DGP🤣🥳...band party niyee 🥁 💃🏻</p>
-				<p>tui ki bhebechili ? Banchodddddddd</p> 
-				<p>amra bhule gechi ajker special din ta?</p> 
-				<p>Ajke tr moto ekta (@#*$)sundor bhodro suor jonmo niyechiloo...</p> 
-				<p>j no one can forget ever🤣🤌🏻</p>
-				<p>basss bohut likh diya abhi</p> 
-				<p> payment bhej dena itna sb accha likhne ka..</p> 
-				<p>Joy aloo potoler joy✊🏻</p>
-				<p>ajker din ta khub moja korr...</p>
-				<p>God bless u our chota cum boro dada😝😝...</p> 
-				<p>chakrir chinta chere de...babar ta peye jabi🌚</p> 
-				<p>r tarpor amader referral diye dishh...</p> 
-				<p>mojak aparttt peye jabi fs ....</p> 
-				<p>Subho jonom dibos😼🤝🍰</p>
-				<p>Treat ta kobe asbe??</p> 
-				<p>BokaChelaaaaa</p>
+			    <p>Aj ki reee ??</p>
+<p>Today is a very special day😋</p> 
+<p>because it's our pagla premik's bday!</p> <p>That’s why..let's make it</p> 
+<p>the best celebration ever!!!!!!</p> 
+<p>Tui ekhon kolkatai nei...</p> 
+<p>Tai eita banano tomar jonno.</p> 
+<p>Ek chota sa 🎁</p> 
+<p>Sudhu matro tor jonno khanki</p> 
+<p>It's been 3 years we know u...</p> 
+<p>Like seriously...Bhaba jai!??😱</p> 
+<p>Eitoh sedin amra section F e dhuklam</p> 
+<p>Ar kengla ekta bisu k dekhlm😂🤣</p> 
+<p>sala kobe hutt kore ese amader jibone topke geli janina...</p> 
+<p>sedin theke ekhono jaliye jacchisss...</p> 
+<p>irritate kora ta bondho kor ebar plzzz 🙏🏻..</p> 
+<p>Ei 3 yrs er moddhei prochur  jhamela hoeche </p> 
+<p> jhograo korechi😂 </p>
+<p>abar onek fajlamo merechi...</p> 
+<p>cheers to the good times</p> 
+<p>when we 3 shared the same bench😭😂</p> 
+<p>hopefully abar sei time ekdin fire pabo🥺🤌🏻</p> 
+<p>Remember </p> 
+<p>aloo potol sob somoi eksathe chilo</p>
+<p>eksath thakbe 🫂</p> 
+<p>jotoi ja boli mone rakhis </p> 
+<p>sob tr bhalor jonnoi bola hoi</p> 
+<p>and tui seta bujhiso, but kokhono badramo korishh 🐒...</p> 
+<p>asa kori tor sob sopno puron hok ....</p> 
+<p>tui tor sopner rajkonya k khuje peye ja joldi</p>
+<p>tle amra sobai gari kore jabo DGP🤣🥳...band party niyee 🥁 💃🏻</p>
+<p>tui ki bhebechili ? Banchodddddddd</p> 
+<p>amra bhule gechi ajker special din ta?</p> 
+<p>Ajke tr moto ekta (@#*$)sundor bhodro suor jonmo niyechiloo...</p> 
+<p>j no one can forget ever🤣🤌🏻</p>
+<p>basss bohut likh diya abhi</p> 
+<p> payment bhej dena itna sb accha likhne ka</p> 
+<p>Joy aloo potoler joy✊🏻</p>
+<p>ajker din ta khub moja korr...</p>
+<p>God bless u our chota cum boro dada😝😝...</p> 
+<p>chakrir chinta chere de...babar ta peye jabi🌚</p> 
+<p>r tarpor amader referral diye dishh...</p> 
+<p>mojak aparttt peye jabi fs ....</p> 
+<p>Subho jonom dibos😼🤝🍰</p>
+<p>Nijer paglamo gulo chaliyee ja<p>
+<p>Treat ta kobe asbe??</p> 
+<p>BokaCheleeee</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
